--- a/CosmetologyScheduling/CosmetologyScheduling.csproj
+++ b/CosmetologyScheduling/CosmetologyScheduling.csproj
@@ -50,6 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustCreate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CustCreate.Designer.cs">
+      <DependentUpon>CustCreate.cs</DependentUpon>
+    </Compile>
     <Compile Include="CustLookup.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +76,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CustCreate.resx">
+      <DependentUpon>CustCreate.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CustLookup.resx">
       <DependentUpon>CustLookup.cs</DependentUpon>
     </EmbeddedResource>
